# tutorial_2020

./: README.md
examples_and_samples/hard_samples/: answers.txt
task/: README.md
task/week1/: Programming_Exercise.md  README.md
task/week2/: README.md
task/week3/: README.md
tasks/project/: README.md
tasks/project/identQR/: README.md
tasks/project/identQR/src/: CMakeLists.txt  idenQR.cpp
tasks/project/myCanny/src/: CMakeLists.txt  myCanny.cpp
tasks/week1/: .gitignore  HelloWorld.cpp  README.md  longestPalindrome.cpp  programming_exercise.md
tasks/week2/: README.md  digit_progromme.md  shell_exercise.md
tasks/week2/digit_programme/: digital_exercise.md  digital_main_function.cpp  digital_opencv.h  makefile
tasks/week2/programming_exercise/: longestCommon.cpp
tasks/week2/shell_exercise/: homework1.sh  homework2.sh
tasks/week3/: README.md  programming_exercise.md  project_description.md  task3_description.md
tasks/week3/homework/devel/: .catkin
tasks/week3/homework/devel/include/direction_publisher/: direction_msg.h
tasks/week3/homework/src/direction_publisher/: CMakeLists.txt
tasks/week3/homework/src/dynamic_refg/: CMakeLists.txt  package.xml
tasks/week3/homework/src/dynamic_refg/cfg/: My_cfg.cfg
tasks/week3/homework/src/dynamic_refg/src/: node.cpp
tasks/week3/homework/src/little_car/: CMakeLists.txt
tasks/week3/homework/src/random_create/: CMakeLists.txt
tasks/week3/homework/src/server_client/: CMakeLists.txt
tasks/week3/ros_project/devel/: .catkin  .rosinstall
tasks/week3/ros_project/src/little_car/: CMakeLists.txt
(+85 files in other folders)
